<resources>
    <string name="app_name">ShopWay</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_ShopList">Shop List</string>
    <string name="title_Cart">Shopping Cart</string>
    <string name="sing_in">Sign In</string>
    <string name="sms">smsms</string>
    <string name="online_paper">Online discount newspaper</string>
    <string name="call_deli">Call the deliverer</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="checkout_string">CheckOut</string>
    <string name="added_snack">" added to cart!"</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="products_string">Products</string>
    <string name="order_string">Order</string>
    <string name="profile">Profile</string>
    <string name="remove_snack">" is now removed!"</string>
    <string name="undo_snack">Undo</string>
    <string name="thank_order">"Thank you for Ordering! Your order should come in "</string>
    <string name="arrive_order">Your order should arrive now!</string>
    <string name="total_cart">"Your total order price is: "</string>
    <string name="horsens_string">Horsens</string>
    <string name="netto_string">Netto</string>
    <string name="bilka_string">Bilka</string>
    <string name="lov_string">Løvbjerg</string>
    <string name="rema_string">Rema1000</string>
    <string name="lidl_string">Lidl</string>
    <string name="fakta_string">Fakta</string>
    <string name="quantity_string">"Quantity: "</string>
    <string name="mBeef_string">Minced Beef</string>
    <string name="beef_string">Beef</string>
    <string name="potato_string">Potatoes</string>
    <string name="soda_string">Coca Cola</string>
    <string name="mango_string">Mango</string>
    <string name="shroom_string">Mushrooms</string>
    <string name="gin_string">Gin Tonic</string>
    <string name="juice_string">Juice</string>
    <string name="tow_string">Towels</string>
    <string name="scale_string">Kitchen Scale</string>
    <string name="cot_string">Cotlete</string>
    <string name="pear_string">Pears</string>
    <string name="blueberies_string">Blueberries</string>
    <string name="chick_string">Chicken</string>
    <string name="clem_string">Clementines</string>
    <string name="champ_string">Champange</string>
    <string name="shampo_string">Shampoo</string>
    <string name="soap_string">Soap</string>
    <string name="pork_string">Pork</string>
    <string name="soya_string">Soya Milk</string>
    <string name="yoghurt_string">Yoghurt</string>
    <string name="coffee_string">Coffee</string>
    <string name="toilet_string">Toilet Paper</string>
    <string name="ham_string">Ham</string>
    <string name="corn_string">Corn</string>
    <string name="cookie_string">Cookies</string>
    <string name="chips_string">Chips</string>
    <string name="sousage_string">Sausage</string>
    <string name="bread_string">Bread</string>
    <string name="corny_string">Corny</string>
    <string name="ice_string">Ice Cream</string>
    <string name="bluse_string">Bluse</string>
    <string name="name_string">Name</string>
    <string name="age_string">Age</string>
    <string name="address_string">Address</string>
    <string name="city_string">City</string>
    <string name="post_string">Post Code</string>
</resources>