<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/navigation_view">
        <item
            android:id="@+id/nav_shop"
            android:title="@string/title_ShopList" />
        <item
            android:id="@+id/nav_cart"
            android:title="@string/title_Cart" />
    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:title="@string/log_out"
                android:id="@+id/logOutItem"
                android:onClick="signOut"
                />
        </menu>
    </item>

</menu>