<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_shop">

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.shopway.ui.ShopListFragment"
        android:label="@string/title_ShopList"
        tools:layout="@layout/fragment_shop_list"
        >
        <action
            android:id="@+id/action_nav_shop_to_nav_items"
            app:destination="@id/nav_items" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shopway.ui.CartFragment"
        android:label="@string/title_Cart"
        tools:layout="@layout/fragment_shopping_cart"
        >
        <action
            android:id="@+id/action_nav_cart_to_nav_order"
            app:destination="@id/nav_order" />
    </fragment>

    <fragment
        android:id="@+id/nav_items"
        android:name="com.example.shopway.ui.ShopItemsFragment"
        android:label="@string/products_string"
        tools:layout="@layout/fragment_shop_items"
        />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.shopway.ui.OrderStatusFragment"
        android:label="@string/order_string"
        tools:layout="@layout/fragment_order_status"
        />

</navigation>